--- a/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
@@ -118,4 +118,8 @@
 	padding: .5rem;
 	color: var(--accent80);
 	background-color: rgba(255, 255, 255, .6);
+
+	//color: #fff;
+	//background-color: rgba(var(--accent50rgb), 0.7);
+	//margin-top: .5rem;
 }
