--- a/src/components/common/atoms/Input/Input.scss
+++ b/src/components/common/atoms/Input/Input.scss
@@ -22,8 +22,17 @@
 	padding: 0 .5rem;
 	outline: none;
 }
+.ptr-input-text input::placeholder {
+  color: var(--base50);
+}
 .ptr-input-text.focus {
-	box-shadow: 0 0 2px 2px var(--accent60); // todo
+	box-shadow: 0 0 2px 2px var(--accent50); // todo
+}
+
+/* Inverted */
+.ptr-input-text.inverted input {
+  background: none;
+  color: var(--base0); //todo
 }
 
 /* Multiline */
@@ -42,15 +51,25 @@
 	width: 100%;
 }
 .ptr-input-text.multiline .ptr-editable-text:focus {
-	box-shadow: 0 0 2px 2px var(--accent60); // todo
+	box-shadow: 0 0 2px 2px var(--accent50); // todo
 }
 
 /* Disabled */
 .ptr-input-text.disabled {
-	border: 1px solid var(--base30); // todo
+	border: 1px solid var(--base40); // todo
+  	background: var(--base15);
 }
 
 .ptr-input-text.disabled input,
 .ptr-input-text.disabled .ptr-editable-text {
-	color: var(--base50); // todo
+	color: var(--base40); // todo
+}
+
+.ptr-input-text.inverted.disabled {
+  border-color: var(--base60); // todo
+  background: var(--base85);
+}
+
+.ptr-input-text.inverted.disabled input {
+  color: var(--base60);
 }
