--- a/src/apps/esponFuore/components/Header/components/ScopeSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/ScopeSelect/style.scss
@@ -74,3 +74,11 @@
 	background: var(--accent20);
 }
 
+
+@media screen and (max-width: 70rem)  {
+	.esponFuore-scope-select-list {
+		left: 6.8rem;
+		width: 12.4rem;
+	}
+}
+
