--- a/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
@@ -61,6 +61,9 @@
 	font-size: $b1;
 	color: #fffc;
 	padding: .6rem .5rem 0 1.05rem;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .esponFuore-indicator-select-current-category::after {
 	content: '>';
