--- a/src/components/common/WindowsContainer/style.scss
+++ b/src/components/common/WindowsContainer/style.scss
@@ -1,5 +1,93 @@
+@import '../../../styles/variables';
+
 .ptr-windows-container {
 	width: 100%;
 	height: 100%;
 	position: relative;
+	overflow: hidden;
+	z-index: 10;
+}
+
+.ptr-window {
+	background: rgba(var(--base0rgb), .95);
+	border-top: 1px solid var(--base20);
+	border-radius: .2rem;
+	box-shadow: 0 7px 10px 0 rgba(var(--base100rgb), .25);
+}
+
+.ptr-window-handle {
+	cursor: move;
+}
+
+.ptr-window-header {
+	display: flex;
+	height: 2.5rem;
+	border-bottom: 1px solid var(--base25);
+}
+
+.ptr-window-title {
+	white-space: nowrap;
+	color: var(--base80);
+	overflow: hidden;
+	text-overflow: ellipsis;
+	font-size: $a1;
+	font-weight: bold;
+	flex-grow: 1;
+	padding: .5rem .3rem .5rem .6rem;
+}
+
+.ptr-window-controls {
+	height: 2.5rem;
+	//background: red;
+	padding: calc(.375rem - 1px) .3rem;
+}
+
+.ptr-window-controls.fixed {
+	position: fixed;
+	right: calc(.15rem + 16px);
+	top: .15rem;
+}
+
+.ptr-window-controls.fixed .ptr-window-control {
+	background: rgba(var(--base100rgb), .1);
+	border-radius: .75rem;
+	margin-left: .3rem;
+	transition: background .3s ease-in-out;
+}
+
+.ptr-window-controls.fixed .ptr-window-control:hover {
+	background: rgba(var(--base100rgb), .2);
+}
+
+.ptr-window-control {
+	cursor: pointer;
+	height: 1.75rem;
+	width: 1.75rem;
+	padding: .25rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.ptr-window-control .ptr-icon {
+	height: 1.25rem;
+	width: 1.25rem;
+}
+
+.ptr-window-control .ptr-icon .line {
+	fill: var(--base40);
+	transition: fill .3s ease-in-out;
+}
+
+.ptr-window-control:hover .ptr-icon .line {
+	fill: var(--base80);
+}
+
+.ptr-window-controls {
+	display: flex;
+}
+
+.ptr-window-content {
+	overflow: auto;
+	height: 100%;
 }
