--- a/src/components/common/WindowsContainer/style.scss
+++ b/src/components/common/WindowsContainer/style.scss
@@ -26,14 +26,23 @@
 }
 
 .ptr-window-title {
+	display: flex;
+	align-items: center;
 	white-space: nowrap;
-	color: var(--base80);
+	color: var(--base85);
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: $a1;
 	font-weight: bold;
 	flex-grow: 1;
 	padding: .5rem .3rem .5rem .6rem;
+}
+
+.ptr-window-title > .ptr-icon {
+	fill: currentColor;
+	width: 1.25rem;
+	height: 1.25rem;
+	margin-right: .35rem;
 }
 
 .ptr-window-controls {
