--- a/src/components/common/WindowsContainer/style.scss
+++ b/src/components/common/WindowsContainer/style.scss
@@ -13,6 +13,7 @@
 	border-top: 1px solid var(--base20);
 	border-radius: .2rem;
 	box-shadow: 0 7px 10px 0 rgba(var(--base100rgb), .25);
+	z-index: 9999;
 }
 
 .ptr-window-handle {
