--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -30,16 +30,20 @@
 	fill: #9bd3cb;
 }
 
-.ptr-column-chart-axis-x-line,
-.ptr-column-chart-axis-y-line {
+.ptr-axis-baseline {
 	stroke-width: 2px;
 	stroke-linecap: square;
 	stroke: var(--base30);
 }
 
-.ptr-column-chart-axis-gridline {
+.ptr-axis-gridline {
 	stroke-width: 1px;
 	stroke-linecap: square;
 	stroke: var(--base25);
+}
+
+.ptr-tick-caption {
+	fill: var(--base45);
+	font-size: $b1;
 }
 
