--- a/src/components/common/atoms/Menu/style.css
+++ b/src/components/common/atoms/Menu/style.css
@@ -28,7 +28,7 @@
 }
 .ptr-menu-item.disabled {
 	pointer-events: none;
-	color: var(--base40);
+	color: var(--base30);
 }
 .ptr-menu-item.disabled > .ptr-icon .line,
 .ptr-menu-item.disabled > .ptr-icon .polygon {
@@ -40,7 +40,7 @@
 
 
 .ptr-menu-item:hover {
-	background: var(--base30);
+	background: var(--base40);
 }
 
 .ptr-menu-item > .ptr-icon {
@@ -61,4 +61,8 @@
 	font-size: .9375rem;
 	line-height: 1.5rem;
 	margin: 0 .25rem;
+}
+
+.ptr-menu-item.disabled .ptr-menu-item-caption {
+	color: var(--base40);
 }
