--- a/src/components/common/WindowsContainer/style.scss
+++ b/src/components/common/WindowsContainer/style.scss
@@ -9,7 +9,7 @@
 }
 
 .ptr-window {
-	background: rgba(var(--base0rgb), .95);
+	background: var(--base0);
 	border-top: 1px solid var(--base20);
 	border-radius: .2rem;
 	box-shadow: 0 7px 10px 0 rgba(var(--base100rgb), .25);
