--- a/src/components/common/charts/ChartWrapper/style.scss
+++ b/src/components/common/charts/ChartWrapper/style.scss
@@ -34,6 +34,10 @@
 }
 
 .ptr-chart-wrapper-content {
+	padding: 1rem 1.5rem 1rem .5rem;
+}
+
+.ptr-chart-wrapper-content > div {
 	position: relative;
-	padding: .5rem 1.5rem .5rem .5rem;
+	width: 100%;
 }
