Update Views to provide access to other data in the VISAT.

--- a/src/components/common/intro/introHeader/style.css
+++ b/src/components/common/intro/introHeader/style.css
@@ -8,6 +8,11 @@
 	display: flex;
 	flex-direction: column;
 }
+
+.views-inline .ptr-intro-header {
+	min-height: 18rem;
+}
+
 .ptr-intro-header.small {
 	min-height: 5rem;
 }
