--- a/src/projects.css
+++ b/src/projects.css
@@ -125,6 +125,9 @@ html.urban-tep .intro-screen-title {
 }
 
 /* intro */
+.eo4sd.views-inline .ptr-intro-header {
+	padding-top: 10px;
+}
 .eo4sd .ptr-intro-header {
 	border: 0;
 }
@@ -257,36 +260,36 @@ html.urban-tep .intro-screen-title {
 /* === PUCS ===================================== */
 
 /* specific font-family */
-.pucs.newDesign body,
-.pucs.newDesign .component-button,
+.pucs body,
+.pucs .component-button,
 
-.pucs.newDesign #header,
-.pucs.newDesign #header h1,
-.pucs.newDesign #header a,
-.pucs.newDesign #view-selector,
-.pucs.newDesign #content-intro,
-.pucs.newDesign #content-intro-guide,
-.pucs.newDesign #view-selector .field .label,
-.pucs.newDesign.x-border-box .custom-combo .x-form-text,
-.pucs.newDesign.x-border-box .x-form-text,
-.pucs.newDesign #app-view-selector-visualization-save .x-btn.custom-button.x-btn-default-small .x-btn-inner,
-.pucs.newDesign .thematic-maps-settings .x-window-header-text-default,
-.pucs.newDesign .chart-panel .x-panel-header-text,
-.pucs.newDesign .x-boundlist .x-boundlist-item,
-.pucs.newDesign .paging-toolbar .x-toolbar-text,
-.pucs.newDesign .paging-toolbar .x-form-text,
-.pucs.newDesign .tools-filters-list .x-form-display-field,
-.pucs.newDesign .x-column-header,
-.pucs.newDesign .x-grid-row .x-grid-cell,
-.pucs.newDesign .x-btn .x-btn-inner,
-.pucs.newDesign .x-panel-header-text-default,
-.pucs.newDesign .x-panel-header-text-default-framed,
-.pucs.newDesign .x-form-item,
-.pucs.newDesign .x-fieldset-header,
+.pucs #header,
+.pucs #header h1,
+.pucs #header a,
+.pucs #view-selector,
+.pucs #content-intro,
+.pucs #content-intro-guide,
+.pucs #view-selector .field .label,
+.pucs.x-border-box .custom-combo .x-form-text,
+.pucs.x-border-box .x-form-text,
+.pucs #app-view-selector-visualization-save .x-btn.custom-button.x-btn-default-small .x-btn-inner,
+.pucs .thematic-maps-settings .x-window-header-text-default,
+.pucs .chart-panel .x-panel-header-text,
+.pucs .x-boundlist .x-boundlist-item,
+.pucs .paging-toolbar .x-toolbar-text,
+.pucs .paging-toolbar .x-form-text,
+.pucs .tools-filters-list .x-form-display-field,
+.pucs .x-column-header,
+.pucs .x-grid-row .x-grid-cell,
+.pucs .x-btn .x-btn-inner,
+.pucs .x-panel-header-text-default,
+.pucs .x-panel-header-text-default-framed,
+.pucs .x-form-item,
+.pucs .x-fieldset-header,
 
 .pucs #top-toolbar .item,
 .pucs .floater-header-title,
-.pucs.newDesign .mode-3d .detached-window .x-window-header-text-default,
+.pucs .mode-3d .detached-window .x-window-header-text-default,
 .pucs .tool-window-title,
 
 .pucs .ptr-window-title,
@@ -300,78 +303,78 @@ html.urban-tep .intro-screen-title {
 
 
 /* header */
-.pucs.newDesign #header {
+.pucs #header {
 	padding-left: 10px;
 }
-.pucs.newDesign #home-page {
+.pucs #home-page {
 	padding: 10px 8px;
 }
-.pucs.newDesign #header-view-selection {
+.pucs #header-view-selection {
 	padding: 7px 0 0 35px;
 }
-.pucs.newDesign #header-view-selection > div {
+.pucs #header-view-selection > div {
 	display: flex;
 }
-.pucs.newDesign .ptr-view-selection-wrapper {
+.pucs .ptr-view-selection-wrapper {
 	padding-left: 150px;
 }
 
 /* top-tool-bar */
-.pucs.newDesign #top-toolbar .item {
+.pucs #top-toolbar .item {
 	font-weight: 500;
 }
-.pucs.newDesign #top-toolbar .item.open {
+.pucs #top-toolbar .item.open {
 	color: rgba(212,90,58,1);
 }
 
 /* floaters */
-.pucs.newDesign .floater-header,
-.pucs.newDesign .ptr-window-header{
+.pucs .floater-header,
+.pucs .ptr-window-header{
 	background: rgba(212,90,58,.9);
 }
-.pucs.newDesign .floater.pinned .floater-header,
-.pucs.newDesign .ptr-window.docked .ptr-window-header {
+.pucs .floater.pinned .floater-header,
+.pucs .ptr-window.docked .ptr-window-header {
 	background: rgba(212,90,58,1);
 }
 
 /* mapTools widget */
-.pucs.newDesign .map-tools-container > h4 {
+.pucs .map-tools-container > h4 {
 	color: rgba(212,90,58,1);
 }
-.pucs.newDesign .toggle-icon.active:before {
+.pucs .toggle-icon.active:before {
 	color: rgba(212,90,58,1);
 }
 
 /* scenarios */
-.pucs.newDesign .case-list-item.unsaved-editing {
+.pucs .case-list-item.unsaved-editing {
 	border-color: rgba(212,90,58,.7);
 }
-.pucs.newDesign .case-list-item.unsaved-editing .case-list-item-footer-editing {
+.pucs .case-list-item.unsaved-editing .case-list-item-footer-editing {
 	color: rgba(212,90,58,1);
 }
-.pucs.newDesign .case-detail-controls {
+.pucs .case-detail-controls {
 	background: rgba(212,90,58,.3);
 }
 
 /* buttons */
-.pucs.newDesign .ptr-button.primary {
+.pucs .ptr-button.primary {
 	background: rgba(212,90,58,.85);
 }
-.pucs.newDesign .ptr-button.primary:hover {
+.pucs .ptr-button.primary:hover {
 	background: rgba(212,90,58,1);
 }
 
 /* sliders and checkboxes */
-.pucs.newDesign .slider-row.ui-slider-horizontal .ui-slider-handle {
+.pucs .slider-row.ui-slider-horizontal .ui-slider-handle {
 	border-color: rgba(212,90,58,1);
 }
-.pucs.newDesign .slider-row.ui-slider-horizontal .ui-slider-handle:hover,
-.pucs.newDesign .slider-row.ui-slider-horizontal .ui-slider-handle.ui-state-focus {
+.pucs .slider-row.ui-slider-horizontal .ui-slider-handle:hover,
+.pucs .slider-row.ui-slider-horizontal .ui-slider-handle.ui-state-focus {
 	background:rgba(212,90,58,1);
 }
 
-.pucs.newDesign .checkbox-row.checked .checkbox-icon:before,
-.pucs.newDesign .radiobox-row.checked .radiobox-icon:before {
+.pucs .checkbox-row.checked .checkbox-icon:before,
+.pucs .radiobox-row.checked .radiobox-icon:before {
 	color: rgba(212,90,58,1);
 }
 
