--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -8,16 +8,22 @@
 	background: var(--base15);
 }
 
+.ptr-chart-container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
 .ptr-chart {
 }
 
 .ptr-chart-popup {
 	position: absolute;
-	background: rgba(var(--base0rgb), .85);
+	background: rgba(var(--base0rgb), .90);
 	z-index: 1;
 	padding: .35rem;
 	border: 1px solid var(--base30);
-	box-shadow: 0 5px 7px 0 rgba(var(--base100rgb), 0.25);
+	box-shadow: 0 3px 7px 0 rgba(var(--base100rgb), 0.20);
 	font-size: $b1;
 	color: var(--base80);
 }
@@ -27,12 +33,11 @@
 }
 
 /* Column chart */
-
 .ptr-column-chart {
 }
 
 .ptr-column-chart-bar {
-	fill: #9bd3cb;
+	fill: var(--accent50);
 	transition: fill .3s ease-in-out;
 }
 
@@ -41,11 +46,11 @@
 }
 
 .ptr-column-chart-bar:hover {
-	fill: #129a7d;
+	fill: var(--accent65);
 }
 
 .ptr-column-chart-path {
-	fill: #9bd3cb;
+	fill: var(--accent50);
 }
 
 .ptr-axis-baseline {
@@ -61,7 +66,7 @@
 }
 
 .ptr-tick-caption {
-	fill: var(--base45);
+	fill: var(--base50);
 	font-size: $b1;
 }
 
