Column chart docs - remove unneeded divs and content size box

--- a/src/apps/docs/components/DocsPage/style.scss
+++ b/src/apps/docs/components/DocsPage/style.scss
@@ -39,7 +39,7 @@
   margin: .2rem;
 }
 
-.ptr-docs-panel-section .chart {
+.ptr-docs-panel-section .ptr-chart {
   border: 2px dashed var(--base25);
 }
 
