--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -62,7 +62,7 @@
 
 .ptr-column-chart-bar {
 	fill: var(--accent50);
-	transition: fill .3s ease-in-out;
+	transition: height 1.5s ease-in-out;
 }
 
 .ptr-column-chart-bar.hidden {
@@ -86,9 +86,18 @@
 	fill: none;
 	stroke-width: 2;
 	transition: stroke-width .3s ease-in-out, stroke .3s ease-in-out;
+	animation: draw 2s ease-in-out 1;
+	animation-fill-mode: forwards;
 }
 
 .ptr-line-chart-line:hover {
 	stroke-width: 3;
 	z-index: 1;
+}
+
+
+@keyframes draw {
+	to {
+		stroke-dashoffset: 0;
+	}
 }
