--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -86,18 +86,33 @@
 	fill: none;
 	stroke-width: 2;
 	transition: stroke-width .3s ease-in-out, stroke .3s ease-in-out;
-	animation: draw 2s ease-in-out 1;
+	animation: pathDraw 2s ease-in-out 1;
 	animation-fill-mode: forwards;
 }
 
-.ptr-line-chart-line:hover {
+.ptr-chart-point {
+	transition: fill .3s ease-in-out, r .3s ease-in-out, stroke-width .3s ease-in-out;
+	animation: pointDraw .3s ease-in-out 1;
+	animation-fill-mode: forwards;
+	animation-delay: 2s;
+	fill-opacity: 0;
+	stroke-width: 1px;
+	stroke: var(--base10);
+}
+
+.ptr-line-chart-line-wrapper:hover .ptr-line-chart-line {
 	stroke-width: 3;
-	z-index: 1;
 }
 
 
-@keyframes draw {
+@keyframes pathDraw {
 	to {
 		stroke-dashoffset: 0;
+	}
+}
+
+@keyframes pointDraw {
+	to {
+		fill-opacity: 1;
 	}
 }
