--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -100,6 +100,14 @@
 	stroke: var(--base10);
 }
 
+.ptr-line-chart-area {
+	fill: rgba(var(--base50rgb), .2);
+	fill-opacity: 0;
+	animation: pathFill .3s ease-in-out 1;
+	animation-delay: 2s;
+	animation-fill-mode: forwards;
+}
+
 .ptr-line-chart-line-wrapper:hover .ptr-line-chart-line,
 .ptr-line-chart-line-wrapper.gray:hover .ptr-line-chart-line {
 	stroke-width: 3;
@@ -121,6 +129,12 @@
 @keyframes pathDraw {
 	to {
 		stroke-dashoffset: 0;
+	}
+}
+
+@keyframes pathFill {
+	to {
+		fill-opacity: 1;
 	}
 }
 
