esponFuore - disabled mocks

--- a/src/apps/esponFuore/components/Header/components/ScopeSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/ScopeSelect/style.scss
@@ -74,6 +74,10 @@
 	background: var(--accent20);
 }
 
+.esponFuore-scope-select-list .ptr-panther-select-item.disabled {
+	pointer-events: none;
+	color: var(--base40);
+}
 
 @media screen and (max-width: 75rem)  {
 	.esponFuore-scope-select-list {
