--- a/src/components/common/maps/MapSet/style.css
+++ b/src/components/common/maps/MapSet/style.css
@@ -1,8 +1,7 @@
 .ptr-map-set {
 	width: 100%;
 	height: 100%;
-	display: flex;
-	flex-direction: column;
-	flex: 1;
 	position: relative;
+	display: flex;
+	flex-wrap: wrap;
 }
