Disallow less than one an more then 9 active periods

--- a/src/apps/esponFuore/components/App/Timeline/style.scss
+++ b/src/apps/esponFuore/components/App/Timeline/style.scss
@@ -27,8 +27,13 @@
 	color: var(--base70);
 }
 
-.esponFuore-timeline-period.active {
+.esponFuore-timeline-period.active,.esponFuore-timeline-period.active.disabled {
 	background: var(--accent50);
 	color: var(--base0);
 }
 
+.esponFuore-timeline-period.disabled {
+	pointer-events: none;
+	color: var(--base35);
+	background: rgba(var(--base0rgb),.6);
+}
