--- a/src/components/common/maps/WorldWindMap/style.css
+++ b/src/components/common/maps/WorldWindMap/style.css
@@ -4,6 +4,7 @@
 	position: relative;
 	height: 100%;
 	width: 100%;
+	border: 1px solid #ccc;
 }
 
 .ptr-world-wind-map-canvas {
@@ -12,5 +13,4 @@
 	width: 100%;
 	position: absolute;
 	background-color: #000;
-	border: 1px solid white;
 }
