--- a/src/components/common/charts/ChartWrapper/style.scss
+++ b/src/components/common/charts/ChartWrapper/style.scss
@@ -34,6 +34,9 @@
 	color: var(--base50);
 	font-size: $b1;
 	margin-top: .1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ptr-chart-wrapper-tools {
