--- a/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
@@ -129,6 +129,7 @@
 	height: 12rem;
 	margin: 0 1rem 1rem 0;
 	cursor: pointer;
+	background-size: cover;
 }
 .esponFuore-indicator-select-indicators > div > span {
 	display: block;
@@ -137,7 +138,7 @@
 	line-height: 1.1;
 	padding: .5rem;
 	color: var(--accent80);
-	background-color: rgba(255, 255, 255, .6);
+	background-color: rgba(255, 255, 255, .75);
 
 	//color: #fff;
 	//background-color: rgba(var(--accent50rgb), 0.7);
