Map legend icon & usage

--- a/src/components/common/maps/MapTools/mapTools.scss
+++ b/src/components/common/maps/MapTools/mapTools.scss
@@ -60,6 +60,11 @@
 	height: 1.35rem;
 }
 
+.map-tools .legend-control .ptr-icon {
+	width: 1.6rem;
+	height: 1.6rem;
+}
+
 .map-tools.small .control > button {
 	width: 1.6rem;
 	height: 1.6rem;
