adjustments for MS edge

--- a/src/apps/esponFuore/components/Header/components/ScopeSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/ScopeSelect/style.scss
@@ -31,8 +31,8 @@
 	height: 1rem;
 }
 
-.esponFuore-scope-select-list {
-	z-index: 30;
+.ptr-panther-select-list.esponFuore-scope-select-list {
+	z-index: 50;
 	left: 6.8rem;
 	width: 16.4rem;
 	height: auto;
