--- a/src/apps/esponFuore/components/Header/components/Tools/style.scss
+++ b/src/apps/esponFuore/components/Header/components/Tools/style.scss
@@ -44,6 +44,9 @@
 }
 
 @media screen and (max-width: 70rem)  {
+	.esponFuore-header-toolbar-tools {
+		padding: 0 0 0 1rem;
+	}
 	.esponFuore-header-tool > span {
 		display: none;
 	}
