--- a/src/apps/esponFuore/styles/index.scss
+++ b/src/apps/esponFuore/styles/index.scss
@@ -180,3 +180,9 @@ $headerHeight: m(2);
 		max-width: 20rem;
 	}
 }
+
+@media screen and (max-width: 55rem)  {
+	.esponFuore-header-region-select {
+		display: none;
+	}
+}
