--- a/src/components/common/charts/ChartWrapper/style.scss
+++ b/src/components/common/charts/ChartWrapper/style.scss
@@ -21,6 +21,7 @@
 .ptr-chart-wrapper-titles {
 	flex-grow: 1;
 	padding: m(1/3) .75rem;
+	max-width: calc(100% - 2rem);
 }
 
 .ptr-chart-wrapper-title {
@@ -43,6 +44,7 @@
 	display: flex;
 	justify-content: flex-end;
 	padding: .25rem;
+	width: 2rem;
 }
 
 .ptr-chart-wrapper-tool .ptr-icon .line {
@@ -115,4 +117,10 @@
 .ptr-chart-wrapper-content > div {
 	position: relative;
 	width: 100%;
+}
+
+@media screen and (max-width: 70rem)  {
+	.ptr-chart-wrapper {
+		margin-bottom: m(2/3);
+	}
 }
