--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -137,6 +137,11 @@
 	opacity: 1;
 }
 
+@media screen and (max-width: 70rem)  {
+	.ptr-charts-container {
+		padding: m(2/3) m(2/3) m(2);
+	}
+}
 
 @keyframes pathDraw {
 	to {
@@ -156,3 +161,5 @@
 		stroke-opacity: 1;
 	}
 }
+
+
