--- a/src/components/common/maps/MapLegend/mapLegend.scss
+++ b/src/components/common/maps/MapLegend/mapLegend.scss
@@ -1,31 +1,38 @@
 @import '../../../../styles/variables';
 
+.legend {
+    margin: m(2/3) 1.5rem;
+}
 
+.legend-title {
 
-.legend .legend-item{
-    margin: 0px 3rem;
+}
+
+.legend-subtitle {
+    color: var(--base50);
+    font-size: 0.809rem;
 }
 
 .legend .legend-item .images{
     
     min-width: 10rem;
+    margin: m(1/3) 0;
  
     .image {
         display: flex;
         align-items: center;
-        justify-content: flex-end;
 
         .title {
-            margin-right: 1rem;
+            margin-left: .5rem;
         }
 
         svg{
-            width: 5rem;
-            height: 3rem;
+            width: 4rem;
+            height: 2rem;
     
             rect{
-                width: 5rem;
-                height: 3rem;
+                width: 4rem;
+                height: 2rem;
             }
         }
 
