MapLegend - style updates

--- a/src/components/common/maps/MapLegend/mapLegend.scss
+++ b/src/components/common/maps/MapLegend/mapLegend.scss
@@ -24,15 +24,16 @@
 
         .title {
             margin-left: .5rem;
+            font-size: $b1;
         }
 
         svg{
-            width: 4rem;
-            height: 2rem;
+            width: 3rem;
+            height: 1.5rem;
     
             rect{
-                width: 4rem;
-                height: 2rem;
+                width: 3rem;
+                height: 1.5rem;
             }
         }
 
