Chart data loading setup

--- a/src/components/common/charts/ChartWrapper/style.scss
+++ b/src/components/common/charts/ChartWrapper/style.scss
@@ -8,6 +8,10 @@
 	background: var(--base0);
 }
 
+.ptr-chart-wrapper-loader {
+	min-height: 15rem;
+}
+
 .ptr-chart-wrapper-header {
 	display: flex;
 	height: m(5/3);
