--- a/src/components/common/atoms/Loader/Loader.css
+++ b/src/components/common/atoms/Loader/Loader.css
@@ -33,10 +33,10 @@
 
 /* C loader
 Apache license 2.0, Copyright (c) 2015 Tom Adamec */
-.c-loader-container, .c-loader-container * {
+.a-loader-container, .a-loader-container * {
 	box-sizing: border-box;
 }
-.c-loader-container {
+.a-loader-container {
 	width: 70px;
 	height: 70px;
 	font-size: 70px;
@@ -50,7 +50,7 @@ Apache license 2.0, Copyright (c) 2015 Tom Adamec */
 	align-items: center;
 	justify-content: center;
 }
-.c-loader-container.small {
+.a-loader-container.small {
 	width: 40px;
 	height: 40px;
 	font-size: 40px;
@@ -63,7 +63,7 @@ Apache license 2.0, Copyright (c) 2015 Tom Adamec */
 		transform: rotate(360deg);
 	}
 }
-.c-loader-container i {
+.a-loader-container i {
 	width: 1em;
 	height: 1em;
 
@@ -75,42 +75,42 @@ Apache license 2.0, Copyright (c) 2015 Tom Adamec */
 	border-color: transparent;
 	border-radius: 999%;
 }
-.c-loader-progress {
+.a-loader-progress {
 	font-size: 1.15rem;
 	font-weight: 600;
 	z-index: 1;
 }
-.c-loader-container i.i1 {
+.a-loader-container i.i1 {
 	animation: c-loader 1500ms linear infinite;
 	border-top-color: rgba(255,80,60,.4);
 	/*border-top-color: rgba(0,0,0,.2);*/
 }
-.c-loader-container i.i2 {
+.a-loader-container i.i2 {
 	animation: c-loader 1300ms linear infinite;
 	border-top-color: rgba(50,255,50,.7);
 	/*border-top-color: rgba(255,255,255,.35);*/
 }
-.c-loader-container i.i3 {
+.a-loader-container i.i3 {
 	animation: c-loader 1100ms linear infinite;
 	border-top-color: rgba(100,160,255,.5);
 	/*border-top-color: rgba(0,0,0,.3);*/
 }
-.c-loader-container i.i4 {
+.a-loader-container i.i4 {
 	animation: c-loader 1700ms linear infinite;
 	/*border-top-color: rgba(255,255,0,.6);*/
 	border-top-color: rgba(245,245,0,.6);
 	/*border-top-color: rgba(255,255,255,.45);*/
 }
-.c-loader-container.blackandwhite i.i1 {
+.a-loader-container.blackandwhite i.i1 {
 	border-top-color: rgba(0,0,0,.2);
 }
-.c-loader-container.blackandwhite i.i2 {
+.a-loader-container.blackandwhite i.i2 {
 	border-top-color: rgba(255,255,255,.35);
 }
-.c-loader-container.blackandwhite i.i3 {
+.a-loader-container.blackandwhite i.i3 {
 	border-top-color: rgba(0,0,0,.3);
 }
-.c-loader-container.blackandwhite i.i4 {
+.a-loader-container.blackandwhite i.i4 {
 	border-top-color: rgba(255,255,255,.45);
 }
 /* C loader end */
