--- a/src/components/common/atoms/Loader/Loader.css
+++ b/src/components/common/atoms/Loader/Loader.css
@@ -10,9 +10,14 @@
 	background: -o-radial-gradient(rgb(200, 200, 200), rgb(150, 150, 150)); /* For Opera 11.6 to 12.0 */
 	background: -moz-radial-gradient(rgb(200, 200, 200), rgb(150, 150, 150)); /* For Fx 3.6 to 15 */
 	background: radial-gradient(rgba(255, 255, 255, 1), rgba(230, 230, 230, 1));
+	opacity: 1;
+	transition: opacity 1s ease-in-out;
 }
 .loading-screen.transparent {
 	background: radial-gradient(rgba(255, 255, 255, .8), rgba(230, 230, 230, .8));
+}
+.loading-screen.fade-out {
+	opacity: 0;
 }
 
 .loading-screen-content-wrap {
