--- a/src/components/common/charts/ChartWrapper/style.scss
+++ b/src/components/common/charts/ChartWrapper/style.scss
@@ -1,6 +1,7 @@
 @import '../../../../styles/variables';
 
 .ptr-chart-wrapper {
+	min-height: 15rem;
 	position: relative;
 	margin-bottom: m(1);
 	border-radius: .2rem;
@@ -9,7 +10,7 @@
 }
 
 .ptr-chart-wrapper-loader {
-	min-height: 15rem;
+	@include positionFill();
 }
 
 .ptr-chart-wrapper-header {
